Updating Index.html
Adding a note about RSVPs

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -129,8 +129,9 @@
 
     <!-- RSVP Now -->
     <section id="invitation" class="pattern">
-         <span>You’re invited to our Wedding!</span>
-        <!--<span style="color: red; font: 44px/36px 'Great Vibes', cursive;">Happy Holidays!</span>-->
+         <span>Our RSVP was previously not working. Please RSVP again below</span>
+        <!-- <span style="color: red; font: 44px/36px 'Great Vibes', cursive;">Happy Holidays!</span> -->
+        <span>Looking forward to seeing everyone in December!!</span>
         <a id="to-rsvp" href="#contact" class="button scrollTo">RSVP NOW</a>
     </section>
     <!-- #RSVP Now -->
