--- a/public_html/index.html
+++ b/public_html/index.html
@@ -501,10 +501,9 @@
                         <div class="corners-bottomright"></div>
                         <h2>Bachelorette Party</h2>
                         <div class="details">
-                            <span class="waddress">TBD</span>
-                            <!--                             <span class="waddress">New Orleans, LA</span>
-                                                        <span class="wdate">Thursday, 16 August 2014</span>
-                                                        <span class="wtime">12:01 AM - 11:59 PM</span> -->
+                            <span class="waddress">New Orleans, LA</span>
+                            <span class="wdate">Thursday, 14 July 2016</span>
+                            <!--<span class="wtime">12:01 AM - 11:59 PM</span>-->
                         </div>
                         <!--                         <a href="" class="button">Read More</a> -->
                     </div>
@@ -517,10 +516,9 @@
                         <div class="corners-bottomright"></div>
                         <h2>Bachelor Party</h2>
                         <div class="details">
-                            <span class="waddress">TBD</span>
-                            <!--                             <span class="waddress">Richomd, VA?</span>
-                                                        <span class="wdate">Friday, 16 August 2014</span>
-                                                        <span class="wtime">8:00 PM - 5:00 AM</span> -->
+                        <span class="waddress">San Francisco, CA</span>
+                        <span class="wdate">Thursday, 30 September 2016</span>
+                        <!--<span class="wtime">8:00 PM - 5:00 AM</span> &ndash;&gt;-->
                         </div>
                         <!--                         <a href="" class="button">Read More</a> -->
                     </div>
@@ -552,6 +550,7 @@
                             <span class="waddress"> MCO to Port Canaveral</span>
                             <span class="wdate">Saturday, 17 December 2016</span>
                             <span class="wtime">TBD</span>
+                            <span class="wtime"><br>Transporation is being looked into by Neha & Kyle. Full details will be on the website by November 1st</span>
                         </div>
                         <!--                         <a href="" class="button">Read More</a> -->
                     </div>
@@ -580,16 +579,15 @@
                         <div class="corners-bottomright"></div>
                         <h2>Wedding Ceremony</h2>
                         <div class="details">
-                            <span class="waddress">St. Thomas</span>
-                            <span class="waddress">TBD</span>
-                            <!--                             <span class="waddress">60 Switch Street, New York NY</span>
-                                                        <span class="wdate">Thursday, 16 August 2014</span>
-                                                        <span class="wtime">8:00 PM - 5:00 AM</span> -->
+                            <span class="waddress">Villa Botanica</span>
+                            <span class="waddress">7945 Estate, St. Thomas 00802, U.S. Virgin Islands</span>
+                            <span class="wdate">Tuesday, 20 December 2016</span>
+                            <span class="wtime">Time: TBD</span>
                         </div>
                         <!--                         <a href="" class="button">Read More</a> -->
                     </div>
                 </div>
-                <div class="column six heart right">
+                <div class="column six heart left">
                     <div class="box center corner wow fadeInLeft animated">
                         <div class="corners-topleft"></div>
                         <div class="corners-bottomleft"></div>
