Updating Website with Registry

--- a/public_html/index2.html
+++ b/public_html/index2.html
@@ -94,7 +94,6 @@
                         <li><a href="#couple">Story</a></li>
                         <li><a href="#loveline">Loveline</a></li>
                         <li><a href="#wedding-events">Events</a></li>
-                        <li><a href="#gift-registry">Registry</a></li>
                         <!-- <li><a href="#important-people">People</a></li> -->
                         <li><a href="#wedding-gallery">Family</a></li>
                         <!-- <li><a href="#gift-registry">Gifts</a></li> -->
@@ -130,9 +129,10 @@
 
     <!-- RSVP Now -->
     <section id="invitation" class="pattern">
+         <span>Our RSVP was previously not working. Please RSVP again below</span>
         <!-- <span style="color: red; font: 44px/36px 'Great Vibes', cursive;">Happy Holidays!</span> -->
+        <span>Looking forward to seeing everyone in December!!</span>
         <a id="to-rsvp" href="#contact" class="button scrollTo">RSVP NOW</a>
-        <a id="travel" href="https://docs.google.com/forms/d/e/1FAIpQLSfnT3yYxiSv08RzqmPMwxZ0Da5GuDIOXpJGL3avNIdQHMOwjg/viewform" target="_blank" class="button">Reserve Shuttle</a>
     </section>
     <!-- #RSVP Now -->
 
@@ -471,10 +471,11 @@
                         <div class="corners-bottomright"></div>
                         <h2>Book Your Cruise</h2>
                         <div class="details">
-				<span class="wddate">If you are joining us on our 7-day Cruise celebration please contact our Carnival group coordinator Courtney at 1-800-819-3902 ext. 85352. <br><br>We will be sailing on the Carnival Magic from December 17th - 24th. The 5 ports of call are...</span>		
-                        <br><br>
-                        <img src="images/mapofports.png">  
-			</div>
+                            <span class="wddate">Please book your cruise using our group reservation number. By booking in the group, Carnival will be able to easily seat us together in the formal dining room every night and every room will receive a $75 on-board credit. <br><br>
+
+                            You can find cruise details and instructions for how to book your cruise in the "Read More" section below.</span>
+                        </div>
+                        <a href="cruise.html" class="button">Read More</a>
                     </div>
                 </div>
                 <div class="column six heart left movetop">
@@ -548,14 +549,10 @@
                         <div class="details">
                             <span class="waddress"> MCO to Port Canaveral</span>
                             <span class="wdate">Saturday, 17 December 2016</span>
-                        <span class="wtime"><br>We have selected a vendor and will be booking transportation at no cost to yourself for those who need transport from MCO to Port Canaveral the week of our wedding.<br><br>
-In order to use our transportation vendor you will need to ensure the following is true:<br><br>
-  <strong>From the Airport</strong> - Your flight must arrive in enough time for you to board the shuttle to Port Canaveral. The three shuttle times include 9 AM, 11 AM, or 1 PM.<br><br>
-  <strong>From the Cruise</strong> - Your flight must depart at 12 PM or later. While shuttles begin to pick-up as early at 7 AM, they will not depart the Port until they are filled.<br><br>
-<a href="https://docs.google.com/forms/d/e/1FAIpQLSfnT3yYxiSv08RzqmPMwxZ0Da5GuDIOXpJGL3avNIdQHMOwjg/viewform" target="_blank" class="button">Reserve Transportation</a>
-</span>
-			</div>
-			<!--                         <a href="" class="button">Read More</a> -->
+                            <span class="wtime">TBD</span>
+                            <span class="wtime"><br>Transporation is being looked into by Neha & Kyle. Full details will be on the website by November 1st</span>
+                        </div>
+                        <!--                         <a href="" class="button">Read More</a> -->
                     </div>
                 </div>
                 <div class="column six heart right">
@@ -574,8 +571,8 @@ In order to use our transportation vendor you will need to ensure the following 
                         <!--                         <a href="" class="button">Read More</a> -->
                     </div>
                 </div>
-                <div class="column six heart right">
-                    <div class="box center corner wow fadeInLeft animated">
+                <div class="column six heart left">
+                    <div class="box center corner wow fadeInRight animated">
                         <div class="corners-topleft"></div>
                         <div class="corners-bottomleft"></div>
                         <div class="corners-topright"></div>
@@ -585,13 +582,13 @@ In order to use our transportation vendor you will need to ensure the following 
                             <span class="waddress">Villa Botanica</span>
                             <span class="waddress">7945 Estate, St. Thomas 00802, U.S. Virgin Islands</span>
                             <span class="wdate">Tuesday, 20 December 2016</span>
-                            <span class="wtime">Time: 2:30PM</span>
+                            <span class="wtime">Time: TBD</span>
                         </div>
                         <!--                         <a href="" class="button">Read More</a> -->
                     </div>
                 </div>
                 <div class="column six heart left">
-                    <div class="box center corner wow fadeInRight animated">
+                    <div class="box center corner wow fadeInLeft animated">
                         <div class="corners-topleft"></div>
                         <div class="corners-bottomleft"></div>
                         <div class="corners-topright"></div>
@@ -768,92 +765,6 @@ In order to use our transportation vendor you will need to ensure the following 
     </section>
     -->
     <!-- #Important People Section Ends -->
-
-    <!-- Gift Registry Section -->
-
-    <section id="gift-registry" class="pattern">
-        <header class="section-header">
-            <h3 class="section-title">Wedding Registry</h3>
-            <p class="section-tagline">Having you at our wedding is the best present possible! If you insist on buying a gift, please use one of the below.</p>
-        </header>
-        <div class="container">
-            <ul class="small-box corner">
-                <li>
-                    <a class="product" href="https://www.amazon.com/wedding/share/kyleandneha" target="_blank"><img src="images/gifts/registry-amazon.png" alt=""></a>
-                    <div class="corners-topleft"></div>
-                    <div class="corners-bottomleft"></div>
-                    <div class="corners-topright"></div>
-                    <div class="corners-bottomright"></div>
-                </li>
-                <li>
-                    <a class="product" href="http://www.crateandbarrel.com/gift-registry/neha-gupta-and-kyle-dillon/r5417386" target="_blank"><img src="images/gifts/registry-crate.png" alt=""></a>
-                    <div class="corners-topleft"></div>
-                    <div class="corners-bottomleft"></div>
-                    <div class="corners-topright"></div>
-                    <div class="corners-bottomright"></div>
-                </li>
-                <!--<li>-->
-                <!--<a class="product" href="#"><img src="images/gifts/registry-macys.png" alt=""></a>-->
-                <!--<div class="corners-topleft"></div>-->
-                <!--<div class="corners-bottomleft"></div>-->
-                <!--<div class="corners-topright"></div>-->
-                <!--<div class="corners-bottomright"></div>-->
-                <!--</li>-->
-                <!--<li>-->
-                <!--<a class="product" href="#"><img src="images/gifts/registry-tiffany.png" alt=""></a>-->
-                <!--<div class="corners-topleft"></div>-->
-                <!--<div class="corners-bottomleft"></div>-->
-                <!--<div class="corners-topright"></div>-->
-                <!--<div class="corners-bottomright"></div>-->
-                <!--</li>-->
-            </ul>
-            <!--<ul class="small-box corner">-->
-            <!--<li>-->
-            <!--<div class="money">-->
-            <!--<span class="amount">$100</span>-->
-            <!--<a href="#" class="button donate">DONATE</a>-->
-            <!--<div class="corners-topleft"></div>-->
-            <!--<div class="corners-bottomleft"></div>-->
-            <!--<div class="corners-topright"></div>-->
-            <!--<div class="corners-bottomright"></div>-->
-            <!--</div>-->
-            <!--</li>-->
-            <!--<li>-->
-            <!--<div class="money">-->
-            <!--<span class="amount">$200</span>-->
-            <!--<a href="#" class="button donate">DONATE</a>-->
-            <!--<div class="corners-topleft"></div>-->
-            <!--<div class="corners-bottomleft"></div>-->
-            <!--<div class="corners-topright"></div>-->
-            <!--<div class="corners-bottomright"></div>-->
-            <!--</div>-->
-            <!--</li>-->
-            <!--<li>-->
-            <!--<div class="money">-->
-            <!--<span class="amount">$400</span>-->
-            <!--<a href="#" class="button donate">DONATE</a>-->
-            <!--<div class="corners-topleft"></div>-->
-            <!--<div class="corners-bottomleft"></div>-->
-            <!--<div class="corners-topright"></div>-->
-            <!--<div class="corners-bottomright"></div>-->
-            <!--</div>-->
-            <!--</li>-->
-            <!--<li>-->
-            <!--<div class="money">-->
-            <!--<span class="amount">$1000</span>-->
-            <!--<a href="#" class="button donate">DONATE</a>-->
-            <!--<div class="corners-topleft"></div>-->
-            <!--<div class="corners-bottomleft"></div>-->
-            <!--<div class="corners-topright"></div>-->
-            <!--<div class="corners-bottomright"></div>-->
-            <!--</div>-->
-            <!--</li>-->
-            <!--</ul>-->
-        </div>
-    </section>
-
-    <!-- #Gift Registry Section Ends -->
-
 
     <!-- Small Gallery Section -->
 
@@ -1312,6 +1223,90 @@ In order to use our transportation vendor you will need to ensure the following 
     -->
     <!-- #Our Tweets Ends -->
 
+    <!-- Gift Registry Section -->
+    <!--
+    <section id="gift-registry" class="pattern">
+        <header class="section-header">
+            <h3 class="section-title">Gift Registry</h3>
+            <p class="section-tagline">Quisque aliquet erat condimentum sit aptent varius convallis quam a scelerisque nulla accumsan suspendisse scelerisque  aliquet erat aliquet porta erat.</p>
+        </header>
+        <div class="container">
+            <ul class="small-box corner">
+                <li>
+                    <a class="product" href="#"><img src="images/gifts/registry-amazon.png" alt=""></a>
+                    <div class="corners-topleft"></div>
+                    <div class="corners-bottomleft"></div>
+                    <div class="corners-topright"></div>
+                    <div class="corners-bottomright"></div>
+                </li>
+                <li>
+                    <a class="product" href="#"><img src="images/gifts/registry-crate.png" alt=""></a>
+                    <div class="corners-topleft"></div>
+                    <div class="corners-bottomleft"></div>
+                    <div class="corners-topright"></div>
+                    <div class="corners-bottomright"></div>
+                </li>
+                <li>
+                    <a class="product" href="#"><img src="images/gifts/registry-macys.png" alt=""></a>
+                    <div class="corners-topleft"></div>
+                    <div class="corners-bottomleft"></div>
+                    <div class="corners-topright"></div>
+                    <div class="corners-bottomright"></div>
+                </li>
+                <li>
+                    <a class="product" href="#"><img src="images/gifts/registry-tiffany.png" alt=""></a>
+                    <div class="corners-topleft"></div>
+                    <div class="corners-bottomleft"></div>
+                    <div class="corners-topright"></div>
+                    <div class="corners-bottomright"></div>
+                </li>
+            </ul>
+            <ul class="small-box corner">
+                <li>
+                    <div class="money">
+                        <span class="amount">$100</span>
+                        <a href="#" class="button donate">DONATE</a>
+                        <div class="corners-topleft"></div>
+                        <div class="corners-bottomleft"></div>
+                        <div class="corners-topright"></div>
+                        <div class="corners-bottomright"></div>
+                    </div>
+                </li>
+                <li>
+                    <div class="money">
+                        <span class="amount">$200</span>
+                        <a href="#" class="button donate">DONATE</a>
+                        <div class="corners-topleft"></div>
+                        <div class="corners-bottomleft"></div>
+                        <div class="corners-topright"></div>
+                        <div class="corners-bottomright"></div>
+                    </div>
+                </li>
+                <li>
+                    <div class="money">
+                        <span class="amount">$400</span>
+                        <a href="#" class="button donate">DONATE</a>
+                        <div class="corners-topleft"></div>
+                        <div class="corners-bottomleft"></div>
+                        <div class="corners-topright"></div>
+                        <div class="corners-bottomright"></div>
+                    </div>
+                </li>
+                <li>
+                    <div class="money">
+                        <span class="amount">$1000</span>
+                        <a href="#" class="button donate">DONATE</a>
+                        <div class="corners-topleft"></div>
+                        <div class="corners-bottomleft"></div>
+                        <div class="corners-topright"></div>
+                        <div class="corners-bottomright"></div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+    -->
+    <!-- #Gift Registry Section Ends -->
 
     <!-- Guestbook Section -->
     <section id="guestbook">
@@ -1447,13 +1442,52 @@ In order to use our transportation vendor you will need to ensure the following 
     <section id="contact" class="bgcolor">
         <header class="section-header">
             <h3 class="section-title">SEND US YOUR RSVP</h3>
-            <p class="section-tagline">Please RSVP before November 22nd 2016.</p>
+            <p class="section-tagline">Please RSVP before 1 May 2016. <br />Please Enter one RSVP per booking number.</p>
         </header>
         <div class="form">
             <div class="container smaller">
                 <div class="row">
-                	<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfAeIRwX9KjueavVi3wF1g-xVhYmelSqnO8JtD7KlOX0BGscA/viewform?embedded=true" width="760" height="1285" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-		</div>
+                    <form action="action.php"  method="POST" autocomplete="off" class="actionform">
+                        <div class="notification"></div>
+                        <div class="column six">
+                            <label for="name">Name</label>
+                            <input type="text" id="name" name="name">
+                        </div>
+                        <div class="column six">
+                            <label for="email">Email</label>
+                            <input type="text" id="email" name="email">
+                        </div>
+                        <div class="column six">
+                            <label for="attending">Can you make it?</label>
+                            <select name="attending" id="attending">
+                                <option value="No" disabled selected="selected"> Will you be Attending?</option>
+                                <option value="Attending">Can‘t Wait to Celebrate! </option>
+                                <option value="Not Attending">Sorry to Miss Out</option>
+
+                            </select>
+                        </div>
+                        <div class="column six">
+                            <label for="reservationNumber">Booking #</label>
+                            <input type="text" id="reservationNumber" name="reservationNumber">
+                        </div>
+                        <div class="column six">
+                            <label for="persons">Number of guests</label>
+                            <select name="persons" id="persons">
+                                <option value="One" disabled selected="selected"> How many persons?</option>
+                                <option value="One">One</option>
+                                <option value="Two">Two</option>
+                                <option value="Three">Three</option>
+                                <option value="Four">Four</option>
+                                <option value="Five">Five</option>
+                                <option value="Six">Six</option>
+                            </select>
+                        </div>
+                        <div class="clearfix"></div>
+                        <input type="hidden" name="submit">
+                        <input type="submit" value="Send RSVP &rarr;">
+                        <div class="clearfix"></div>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
