--- a/public_html/index.html
+++ b/public_html/index.html
@@ -99,7 +99,7 @@
                         <li><a href="#wedding-gallery">Family</a></li>
                         <!-- <li><a href="#gift-registry">Gifts</a></li> -->
                         <li><a href="#guestbook">GuestBook</a></li>
-                        <li><a href="#instagram-section">WeddingPics</a></li>
+                        <!--<li><a href="#instagram-section">WeddingPics</a></li>-->
                         <li><a href="#contact">RSVP</a></li>
                     </ul>
                 </nav>
@@ -210,7 +210,7 @@
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
                             -->
-                            <li><a href="https://www.linkedin.com/profile/preview?vpa=pub&locale=en_US"><i class="fa fa-linkedin"></i></a>
+                            <!--<li><a href="https://www.linkedin.com/in/kyle-dillon-893ab149"><i class="fa fa-linkedin"></i></a>-->
                             </li>
                         </ul>
                     </div>
@@ -771,7 +771,7 @@ In order to use our transportation vendor you will need to ensure the following 
 
     <!-- Gift Registry Section -->
 
-    <section id="gift-registry" class="pattern">
+    <section id="gift-registry">
         <header class="section-header">
             <h3 class="section-title">Wedding Registry</h3>
             <p class="section-tagline">Having you at our wedding is the best present possible! If you insist on buying a gift, please use one of the below.</p>
@@ -1335,7 +1335,7 @@ In order to use our transportation vendor you will need to ensure the following 
                 </div>
                 <div class="column six heart left movetop">
                     <div class="box pattern wow fadeInRight animated">
-                        <span class="date">30 September</span>
+                        <span class="date">30 September 2015</span>
                         <div class="guest">
                             <p>I'm sooooooo ready for this!!!</p>
                             <span class="name">Neha</span>
@@ -1344,7 +1344,7 @@ In order to use our transportation vendor you will need to ensure the following 
                 </div>
                 <div class="column six heart right">
                     <div class="box pattern wow fadeInLeft animated">
-                        <span class="date">5 October</span>
+                        <span class="date">5 October 2015</span>
                         <div class="guest">
                             <p>I love this, this is so tuff (aka cool in the olden days it is from a book that I read). I love you both and I am so excited for you. I cannot wait to see you both at thanksgiving!!!!! Rock on!!!! <br>- Love,</p>
                             <span class="name">Midget</span>
@@ -1353,7 +1353,7 @@ In order to use our transportation vendor you will need to ensure the following 
                 </div>
                 <div class="column six heart left">
                     <div class="box pattern wow fadeInRight animated">
-                        <span class="date">5 October</span>
+                        <span class="date">5 October 2015</span>
                         <div class="guest">
                             <p>Nice website, can't wait!</p>
                             <span class="name">Justin Behymer</span>
@@ -1362,10 +1362,19 @@ In order to use our transportation vendor you will need to ensure the following 
                 </div>
                 <div class="column six heart right">
                     <div class="box pattern wow fadeInLeft animated">
-                        <span class="date">25 November</span>
+                        <span class="date">25 November 2015</span>
                         <div class="guest">
                             <p>I wasn't expecting the music on the website... nearly fell out of my chair because my volume was too loud. :) Looking forward to celebrating with you next year!</p>
                             <span class="name">Matt McCarrell</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="column six heart left">
+                    <div class="box pattern wow fadeInRight animated">
+                        <span class="date">7 November 2016</span>
+                        <div class="guest">
+                            <p>Hallo Future Mr. and Mrs. Dillon! It was about time for both of you to get married !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! We enclosed you in our hearts</p>
+                            <span class="name">Deine lieben Omi und Opa!!!</span>
                         </div>
                     </div>
                 </div>
@@ -1425,21 +1434,21 @@ In order to use our transportation vendor you will need to ensure the following 
 
     <!-- Instagram Section -->
 
-    <section id="instagram-section" class="pattern">
-        <header class="section-header">
-            <h3 class="section-title">Instagram</h3>
-            <p class="section-tagline">Copy the hashtag below and share your experience from our Wedding :) <br>
-                Profile must be public</p>
-        </header>
-        <span class="hash">#kyleandnehawedding</span>
-        <div class="container">
-            <div class="instagram-images">
-            </div>
-        </div>
-        <div class="load-more">
-            <a href="#" class="button">Load more</a>
-        </div>
-    </section>
+    <!--<section id="instagram-section" class="pattern">-->
+        <!--<header class="section-header">-->
+            <!--<h3 class="section-title">Instagram</h3>-->
+            <!--<p class="section-tagline">Copy the hashtag below and share your experience from our Wedding :) <br>-->
+                <!--Profile must be public</p>-->
+        <!--</header>-->
+        <!--<span class="hash">#kyleandnehawedding</span>-->
+        <!--<div class="container">-->
+            <!--<div class="instagram-images">-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="load-more">-->
+            <!--<a href="#" class="button">Load more</a>-->
+        <!--</div>-->
+    <!--</section>-->
 
     <!-- #Instagram Section Ends -->
 
