--- a/public_html/index.html
+++ b/public_html/index.html
@@ -132,7 +132,7 @@
     <section id="invitation" class="pattern">
         <!-- <span style="color: red; font: 44px/36px 'Great Vibes', cursive;">Happy Holidays!</span> -->
         <a id="to-rsvp" href="#contact" class="button scrollTo">RSVP NOW</a>
-        <a id="travel" href="https://docs.google.com/forms/d/e/1FAIpQLSfnT3yYxiSv08RzqmPMwxZ0Da5GuDIOXpJGL3avNIdQHMOwjg/viewform" target="_blank" class="button">Reserve Shuttle</a>
+        <a id="travel" href="https://docs.google.com/forms/d/e/1FAIpQLSfnT3yYxiSv08RzqmPMwxZ0Da5GuDIOXpJGL3avNIdQHMOwjg/viewform" target="_blank" class="button">RESERVE SHUTTLE</a>
     </section>
     <!-- #RSVP Now -->
 
@@ -210,7 +210,7 @@
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
                             -->
-                            <!--<li><a href="https://www.linkedin.com/in/kyle-dillon-893ab149"><i class="fa fa-linkedin"></i></a>-->
+                            <li><a href="https://www.linkedin.com/profile/preview?vpa=pub&locale=en_US"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -771,7 +771,7 @@ In order to use our transportation vendor you will need to ensure the following 
 
     <!-- Gift Registry Section -->
 
-    <section id="gift-registry">
+    <section id="gift-registry" class="pattern">
         <header class="section-header">
             <h3 class="section-title">Wedding Registry</h3>
             <p class="section-tagline">Having you at our wedding is the best present possible! If you insist on buying a gift, please use one of the below.</p>
@@ -1335,7 +1335,7 @@ In order to use our transportation vendor you will need to ensure the following 
                 </div>
                 <div class="column six heart left movetop">
                     <div class="box pattern wow fadeInRight animated">
-                        <span class="date">30 September 2015</span>
+                        <span class="date">30 September</span>
                         <div class="guest">
                             <p>I'm sooooooo ready for this!!!</p>
                             <span class="name">Neha</span>
@@ -1344,7 +1344,7 @@ In order to use our transportation vendor you will need to ensure the following 
                 </div>
                 <div class="column six heart right">
                     <div class="box pattern wow fadeInLeft animated">
-                        <span class="date">5 October 2015</span>
+                        <span class="date">5 October</span>
                         <div class="guest">
                             <p>I love this, this is so tuff (aka cool in the olden days it is from a book that I read). I love you both and I am so excited for you. I cannot wait to see you both at thanksgiving!!!!! Rock on!!!! <br>- Love,</p>
                             <span class="name">Midget</span>
@@ -1353,7 +1353,7 @@ In order to use our transportation vendor you will need to ensure the following 
                 </div>
                 <div class="column six heart left">
                     <div class="box pattern wow fadeInRight animated">
-                        <span class="date">5 October 2015</span>
+                        <span class="date">5 October</span>
                         <div class="guest">
                             <p>Nice website, can't wait!</p>
                             <span class="name">Justin Behymer</span>
@@ -1362,19 +1362,21 @@ In order to use our transportation vendor you will need to ensure the following 
                 </div>
                 <div class="column six heart right">
                     <div class="box pattern wow fadeInLeft animated">
-                        <span class="date">25 November 2015</span>
+                        <span class="date">25 November</span>
                         <div class="guest">
                             <p>I wasn't expecting the music on the website... nearly fell out of my chair because my volume was too loud. :) Looking forward to celebrating with you next year!</p>
                             <span class="name">Matt McCarrell</span>
                         </div>
                     </div>
                 </div>
+		<div class="clearfix"></div>
+		<div class="timeline-year"><span>2016</span></div>
                 <div class="column six heart left">
                     <div class="box pattern wow fadeInRight animated">
-                        <span class="date">7 November 2016</span>
+                        <span class="date">7 November</span>
                         <div class="guest">
-                            <p>Hallo Future Mr. and Mrs. Dillon! It was about time for both of you to get married !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! We enclosed you in our hearts</p>
-                            <span class="name">Deine lieben Omi und Opa!!!</span>
+                            <p>Hallo Future Mr. and Mrs. Dillon! It was about time for both of you to get married!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!<br>!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! <br>We enclosed you in our hearts,</p>
+                            <span class="name">Deine lieben Omi und Opa</span>
                         </div>
                     </div>
                 </div>
@@ -1478,7 +1480,7 @@ In order to use our transportation vendor you will need to ensure the following 
                 <div class="column four info">Photos by <a href="#">Us</a></div>
             </div>
         </div>
-        <span><audio loop autoplay="yes"><source src="images/Omi.mp3" type="audio/mpeg"></audio></span>
+        <span><audio loop autoplay="yes"><source src="images/LoveMeNow.mp3" type="audio/mpeg"></audio></span>
     </footer>
     <!-- / Footer Section Ends -->
 </section>
