Music controls Added

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1480,7 +1480,7 @@ In order to use our transportation vendor you will need to ensure the following 
                 <div class="column four info">Photos by <a href="#">Us</a></div>
             </div>
         </div>
-        <span><audio loop autoplay="yes"><source src="images/LoveMeNow.mp3" type="audio/mpeg"></audio></span>
+        <span><audio controls loop autoplay="yes" style="position:fixed;left: 10px;bottom:10px;"><source src="images/LoveMeNow.mp3" type="audio/mpeg"></audio></span>
     </footer>
     <!-- / Footer Section Ends -->
 </section>
