Background Color Change

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -771,7 +771,7 @@ In order to use our transportation vendor you will need to ensure the following 
 
     <!-- Gift Registry Section -->
 
-    <section id="gift-registry" class="pattern">
+    <section id="gift-registry">
         <header class="section-header">
             <h3 class="section-title">Wedding Registry</h3>
             <p class="section-tagline">Having you at our wedding is the best present possible! If you insist on buying a gift, please use one of the below.</p>
