--- a/public_html/index.html
+++ b/public_html/index.html
@@ -502,6 +502,8 @@
                         <div class="details">
                             <span class="waddress">New Orleans, LA</span>
                             <span class="wdate">Thursday, 14 July 2016</span>
+                            <br><br>
+                            <img src="images/girls_party.JPG">
                             <!--<span class="wtime">12:01 AM - 11:59 PM</span>-->
                         </div>
                         <!--                         <a href="" class="button">Read More</a> -->
@@ -517,6 +519,8 @@
                         <div class="details">
                         <span class="waddress">San Francisco, CA</span>
                         <span class="wdate">Thursday, 30 September 2016</span>
+                        <br><br>
+                        <img src="images/guys_party.jpg">
                         <!--<span class="wtime">8:00 PM - 5:00 AM</span> &ndash;&gt;-->
                         </div>
                         <!--                         <a href="" class="button">Read More</a> -->
