Time Changes Update
AST != EST

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -589,7 +589,9 @@ In order to use our transportation vendor you will need to ensure the following 
                             <span class="waddress">Villa Botanica</span>
                             <span class="waddress">7945 Estate, St. Thomas 00802, U.S. Virgin Islands</span>
                             <span class="wdate">Tuesday, 20 December 2016</span>
-                            <span class="wtime">Time: 2:30PM</span>
+                            <span class="wtime">Time: 2:30PM (AST)</span>
+                            <br>
+                            <span class="wtime"><strong>NOTE:</strong>The ship time will be in US East Coast (EST) which is 1hr behind St. Thomas local time (AST)</span>
                         </div>
                         <!--                         <a href="" class="button">Read More</a> -->
                     </div>
