--- a/public_html/index.html
+++ b/public_html/index.html
@@ -532,6 +532,38 @@
                         <div class="corners-bottomleft"></div>
                         <div class="corners-topright"></div>
                         <div class="corners-bottomright"></div>
+                        <h2>Civil Ceremony</h2>
+                        <div class="details">
+                            <span class="waddress">Richmond, VA</span>
+                            <span class="wdate">Thursday, 10 November 2016</span>
+                            <!--<span class="wtime">12:01 AM - 11:59 PM</span>-->
+                        </div>
+                        <!--                         <a href="" class="button">Read More</a> -->
+                    </div>
+                </div>
+                <div class="column six heart left movetop">
+                    <div class="box center corner wow fadeInRight animated">
+                        <div class="corners-topleft"></div>
+                        <div class="corners-bottomleft"></div>
+                        <div class="corners-topright"></div>
+                        <div class="corners-bottomright"></div>
+                        <h2>Hindu Ceremony</h2>
+                        <div class="details">
+                            <span class="waddress">Portage, MI</span>
+                            <span class="wdate">Friday, 25 November 2016</span>
+                            <br><br>
+                            <img src="images/selfie.jpg">
+                            <!--<span class="wtime">8:00 PM - 5:00 AM</span> &ndash;&gt;-->
+                        </div>
+                        <!--                         <a href="" class="button">Read More</a> -->
+                    </div>
+                </div>
+                <div class="column six heart right">
+                    <div class="box center corner wow fadeInLeft animated">
+                        <div class="corners-topleft"></div>
+                        <div class="corners-bottomleft"></div>
+                        <div class="corners-topright"></div>
+                        <div class="corners-bottomright"></div>
                         <h2>Fly to Orlando</h2>
                         <div class="details">
                             <span class="waddress">Orlando International Airport (MCO)</span>
@@ -608,6 +640,66 @@ In order to use our transportation vendor you will need to ensure the following 
                             <span class="waddress">1 Cruise Way, Orlando FL</span>
                             <span class="wdate">Saturday, 24 December 2016</span>
                             <span class="wtime">8:00 AM</span>
+                        </div>
+                        <!--                         <a href="" class="button">Read More</a> -->
+                    </div>
+                </div>
+                <div class="column six heart right">
+                    <div class="box center corner wow fadeInLeft animated">
+                        <div class="corners-topleft"></div>
+                        <div class="corners-bottomleft"></div>
+                        <div class="corners-topright"></div>
+                        <div class="corners-bottomright"></div>
+                        <h2>Fly to India</h2>
+                        <div class="details">
+                            <span class="wdate">Saturday, 24 December 2016</span>
+                            <!--<span class="wtime">12:01 AM - 11:59 PM</span>-->
+                        </div>
+                        <!--                         <a href="" class="button">Read More</a> -->
+                    </div>
+                </div>
+                <div class="column six heart left movetop">
+                    <div class="box center corner wow fadeInRight animated">
+                        <div class="corners-topleft"></div>
+                        <div class="corners-bottomleft"></div>
+                        <div class="corners-topright"></div>
+                        <div class="corners-bottomright"></div>
+                        <h2>Wedding Reception I</h2>
+                        <div class="details">
+                            <span class="waddress">Sayaji Hotel</span>
+                            <span class="waddress">Van Vihar Rd, Prempura, Bhopal, Madhya Pradesh 462002, India</span>
+                            <span class="wdate">Thursday, 29 December 2016</span>
+                            <!--<span class="wtime">8:00 PM - 5:00 AM</span> &ndash;&gt;-->
+                        </div>
+                        <!--                         <a href="" class="button">Read More</a> -->
+                    </div>
+                </div>
+                <div class="column six heart right">
+                    <div class="box center corner wow fadeInLeft animated">
+                        <div class="corners-topleft"></div>
+                        <div class="corners-bottomleft"></div>
+                        <div class="corners-topright"></div>
+                        <div class="corners-bottomright"></div>
+                        <h2>Wedding Reception II</h2>
+                        <div class="details">
+                            <span class="waddress">Pushp Aleela</span>
+                            <span class="waddress">A-4, Wazirpur Industrial Area, Opp Shalimar Bagh, Ring Road, Block A, Wazirpur, New Delhi, Delhi 110052, India</span>
+                            <span class="wdate">Monday, 2 January 2017</span>
+                            <!--<span class="wtime">12:01 AM - 11:59 PM</span>-->
+                        </div>
+                        <!--                         <a href="" class="button">Read More</a> -->
+                    </div>
+                </div>
+                <div class="column six heart left movetop">
+                    <div class="box center corner wow fadeInRight animated">
+                        <div class="corners-topleft"></div>
+                        <div class="corners-bottomleft"></div>
+                        <div class="corners-topright"></div>
+                        <div class="corners-bottomright"></div>
+                        <h2>Return to Richmond, VA</h2>
+                        <div class="details">
+                            <span class="wdate">Saturday, 7 January 2017</span>
+                            <!--<span class="wtime">8:00 PM - 5:00 AM</span> &ndash;&gt;-->
                         </div>
                         <!--                         <a href="" class="button">Read More</a> -->
                     </div>
