--- a/public_html/index.html
+++ b/public_html/index.html
@@ -549,7 +549,8 @@
                         <div class="corners-bottomright"></div>
                         <h2>Hindu Ceremony</h2>
                         <div class="details">
-                            <span class="waddress">Portage, MI</span>
+                            <span class="waddress">Indo American Cultural Center</span>
+                            <span class="waddress">2002 Ramona Ave, Portage, MI 49002</span>
                             <span class="wdate">Friday, 25 November 2016</span>
                             <br><br>
                             <img src="images/selfie.jpg">
@@ -644,7 +645,7 @@ In order to use our transportation vendor you will need to ensure the following 
                         <!--                         <a href="" class="button">Read More</a> -->
                     </div>
                 </div>
-                <div class="column six heart right">
+                <div class="column six heart right movetop">
                     <div class="box center corner wow fadeInLeft animated">
                         <div class="corners-topleft"></div>
                         <div class="corners-bottomleft"></div>
@@ -674,7 +675,7 @@ In order to use our transportation vendor you will need to ensure the following 
                         <!--                         <a href="" class="button">Read More</a> -->
                     </div>
                 </div>
-                <div class="column six heart right">
+                <div class="column six heart right movetop">
                     <div class="box center corner wow fadeInLeft animated">
                         <div class="corners-topleft"></div>
                         <div class="corners-bottomleft"></div>
